--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="xposed_scope">
-        <item>com.android</item>
+        <item>com.tencent.tim</item>
     </array>
 </resources>
