--- a/app/src/main/res/layout/item_hook_function.xml
+++ b/app/src/main/res/layout/item_hook_function.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="20dp">
+    android:layout_height="wrap_content">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_item_name"
@@ -12,6 +11,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@id/switch_item"
+        android:minHeight="25dp"
         android:text="功能名称"
         android:textSize="18sp"
         tools:text="功能名称" />
@@ -19,20 +19,17 @@
     <Switch
         android:id="@+id/switch_item"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:minWidth="20dp"
-        android:minHeight="20dp"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_item_tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_item_name"
         android:layout_marginTop="5dp"
-        android:text="功能描述"
-        android:textColor="@color/grey"
-        tools:text="功能描述" />
+        android:textColor="@color/grey" />
 
 </RelativeLayout>
