--- a/app/src/main/res/layout/layout_setting.xml
+++ b/app/src/main/res/layout/layout_setting.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="200dp"
     android:orientation="vertical"
+    android:padding="20dp"
     android:theme="@style/Theme.TimTool">
 
-    <include
-        layout="@layout/item_hook_function"
+    <ListView
+        android:id="@+id/lv_item_list"
+        android:divider="@null"
+        android:dividerHeight="18dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
 
 </LinearLayout>
