--- a/app/src/main/res/layout/layout_setting.xml
+++ b/app/src/main/res/layout/layout_setting.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="20dp"
     android:theme="@style/Theme.TimTool">
 
-    <ListView
+    <com.kongzue.dialogx.util.views.DialogListView
         android:id="@+id/lv_item_list"
         android:divider="@null"
         android:dividerHeight="18dp"
