--- a/app/src/main/res/drawable/bg_sticker_panel_round.xml
+++ b/app/src/main/res/drawable/bg_sticker_panel_round.xml
@@ -4,5 +4,5 @@
     <corners
         android:topLeftRadius="16dp"
         android:topRightRadius="16dp" />
-    <solid android:color="@color/bg_plugin" />
+    <solid android:color="@color/bg_sticker" />
 </shape>
