--- a/app/src/main/res/layout/item_sticker_dir.xml
+++ b/app/src/main/res/layout/item_sticker_dir.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/tv_dir_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:textColor="@color/text_color"
         android:textSize="24sp" />
 </FrameLayout>
