feat:qq use this module

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -2,5 +2,6 @@
 <resources>
     <array name="xposed_scope">
         <item>com.tencent.tim</item>
+        <item>com.tencent.mobileqq</item>
     </array>
 </resources>
