fix: build release exception

--- a/app/src/main/res/layout/layout_message_bubbles_rounded_change.xml
+++ b/app/src/main/res/layout/layout_message_bubbles_rounded_change.xml
@@ -6,6 +6,7 @@
     android:theme="@style/Theme.TimTool">
 
     <TextView
+        android:textColor="@color/white"
         android:gravity="center"
         android:id="@+id/tv_message_demo"
         android:layout_width="wrap_content"
