--- a/app/src/main/res/layout/item_parent_category.xml
+++ b/app/src/main/res/layout/item_parent_category.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="15dp">
+    android:layout_width="match_parent"
+    android:layout_marginBottom="20dp">
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tv_category_title"
+        android:id="@+id/tv_parent_category"
+        android:textColor="@color/text_color"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="分类的标题"
-        android:textSize="20sp" />
+        android:textSize="22sp" />
 
 </LinearLayout>
