--- a/app/src/main/res/layout/layout_setting.xml
+++ b/app/src/main/res/layout/layout_setting.xml
@@ -31,11 +31,11 @@
             android:src="@drawable/ic_telegram_fill" />
     </LinearLayout>
 
-    <top.sacz.timtool.ui.view.CustomRecycleView
-        android:id="@+id/rv_item_list"
+    <FrameLayout
+        android:id="@+id/box_list"
         android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@null"
-        android:dividerHeight="18dp" />
+        android:layout_width="match_parent"
+        android:animateLayoutChanges="true" />
+
 </LinearLayout>
