refactor: add msg menu logic and style code

--- a/app/src/main/res/layout/layout_rereading_setting.xml
+++ b/app/src/main/res/layout/layout_rereading_setting.xml
@@ -10,26 +10,52 @@
     android:paddingBottom="0dp"
     android:theme="@style/Theme.TimTool">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/repeat_icon_size"
-        android:textSize="20sp" />
-
-    <EditText
-        android:id="@+id/edit_repeat_icon_size"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:autofillHints=""
-        android:inputType="number"
-        tools:ignore="LabelFor" />
+        android:orientation="horizontal">
 
-    <CheckBox
-        android:id="@+id/cb_double_click_repeat"
-        android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/repeat_icon_size"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/edit_repeat_icon_size"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:autofillHints=""
+            android:ems="5"
+            android:gravity="center"
+            android:inputType="number"
+            tools:ignore="LabelFor" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:checked="true"
-        android:text="@string/double_click_repeat"
-        android:textSize="18sp" />
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/cb_double_click_repeat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="true"
+            android:text="@string/double_click_repeat"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/cb_show_in_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="true"
+            android:text="@string/show_in_menu"
+            android:textSize="18sp" />
+    </LinearLayout>
 
 </LinearLayout>
